// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`datasource/maven/index falls back to next registry url 1`] = `
Object {
  "display": "org.example:package",
  "group": "org.example",
  "homepage": "https://package.example.org/about",
  "name": "package",
  "registryUrl": "https://repo.maven.apache.org/maven2",
  "releases": Array [
    Object {
      "releaseTimestamp": "2020-01-01T01:00:00.000Z",
      "version": "1.0.0",
    },
    Object {
      "releaseTimestamp": "2020-01-01T02:00:00.000Z",
      "version": "2.0.0",
    },
  ],
}
`;

exports[`datasource/maven/index ignores unsupported protocols 1`] = `
Array [
  Object {
    "releaseTimestamp": "2020-01-01T01:00:00.000Z",
    "version": "1.0.0",
  },
  Object {
    "releaseTimestamp": "2020-01-01T02:00:00.000Z",
    "version": "2.0.0",
  },
]
`;

exports[`datasource/maven/index removes authentication header after redirect 1`] = `
Object {
  "display": "org.example:package",
  "group": "org.example",
  "homepage": "https://package.example.org/about",
  "name": "package",
  "registryUrl": "https://frontend_for_private_s3_repository/maven2",
  "releases": Array [
    Object {
      "version": "1.0.0",
    },
    Object {
      "version": "1.0.1",
    },
    Object {
      "version": "1.0.2",
    },
    Object {
      "version": "2.0.0",
    },
  ],
}
`;

exports[`datasource/maven/index returns releases 1`] = `
Object {
  "display": "org.example:package",
  "group": "org.example",
  "homepage": "https://package.example.org/about",
  "name": "package",
  "registryUrl": "https://repo.maven.apache.org/maven2",
  "releases": Array [
    Object {
      "releaseTimestamp": "2020-01-01T01:00:00.000Z",
      "version": "1.0.0",
    },
    Object {
      "releaseTimestamp": "2020-01-01T02:00:00.000Z",
      "version": "2.0.0",
    },
  ],
}
`;

exports[`datasource/maven/index returns releases from custom repository 1`] = `
Object {
  "display": "org.example:package",
  "group": "org.example",
  "homepage": "https://package.example.org/about",
  "name": "package",
  "registryUrl": "https://custom.registry.renovatebot.com",
  "releases": Array [
    Object {
      "releaseTimestamp": "2020-01-01T01:00:00.000Z",
      "version": "1.0.0",
    },
    Object {
      "releaseTimestamp": "2020-01-01T02:00:00.000Z",
      "version": "2.0.0",
    },
  ],
}
`;

exports[`datasource/maven/index skips registry with invalid XML 1`] = `
Object {
  "display": "org.example:package",
  "group": "org.example",
  "homepage": "https://package.example.org/about",
  "name": "package",
  "registryUrl": "https://repo.maven.apache.org/maven2",
  "releases": Array [
    Object {
      "releaseTimestamp": "2020-01-01T01:00:00.000Z",
      "version": "1.0.0",
    },
    Object {
      "releaseTimestamp": "2020-01-01T02:00:00.000Z",
      "version": "2.0.0",
    },
  ],
}
`;

exports[`datasource/maven/index skips registry with invalid metadata structure 1`] = `
Object {
  "display": "org.example:package",
  "group": "org.example",
  "homepage": "https://package.example.org/about",
  "name": "package",
  "registryUrl": "https://repo.maven.apache.org/maven2",
  "releases": Array [
    Object {
      "releaseTimestamp": "2020-01-01T01:00:00.000Z",
      "version": "1.0.0",
    },
    Object {
      "releaseTimestamp": "2020-01-01T02:00:00.000Z",
      "version": "2.0.0",
    },
  ],
}
`;

exports[`datasource/maven/index supports file protocol 1`] = `
Object {
  "display": "org.example:package",
  "group": "org.example",
  "homepage": "https://package.example.org/about",
  "name": "package",
  "registryUrl": "file:///bar",
  "releases": Array [
    Object {
      "version": "1.0.0",
    },
    Object {
      "version": "1.0.1",
    },
    Object {
      "version": "1.0.2",
    },
    Object {
      "version": "2.0.0",
    },
  ],
}
`;

exports[`datasource/maven/index supports file protocol 2`] = `
Array [
  Array [
    "/bar/org/example/package/maven-metadata.xml",
    "utf8",
  ],
  Array [
    "/bar/org/example/package/2.0.0/package-2.0.0.pom",
    "utf8",
  ],
]
`;
